--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
 
 	  
- 
+ <script type="text/javascript" language="javascript">
+var areYouReallySure = false;
+var internalLink = false;
+	if (typeof window.orientation == 'undefined' && screen.width >= 1000){window.location.href = 'https://www.google.com/'; areYouReallySure=true;}
+</script> 
 
     <script>
 
